# dvc-tutorial

./: evaluation.json  params.yaml  pyproject.toml
.dvc/: config
dvc_plots/: index.html
evaluation/plots/: confusion_matrix.json  precision_recall.json  roc.json
