[tool.poetry]
name = "dvc"
version = "0.1.0"
description = ""
authors = ["pipa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvclive = "^0.6"
pandas = "^1.5.0"
pyaml = "^21.10.1"
scikit-learn = "^1.1.2"
scipy = "^1.9.2"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
